--- a/services/pgadmin.conf
+++ b/services/pgadmin.conf
@@ -7,10 +7,22 @@ server {
     server_name  pg.nicholashenley.com;
 
     location / {
+        auth_request /auth-request;
+
         proxy_pass http://pgadmin/;
         proxy_set_header Host $host;
+        proxy_set_header Referer $scheme://$host$request_uri;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location = /auth-request {
+        internal;
+        proxy_pass http://host.minikube.internal:8080;
+        proxy_pass_request_body off;
+        proxy_set_header Content-Length "";
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_set_header Host $host;
     }
 }
