trying SSL on nginx to fix cloudflare tunnel issues

--- a/services/minio.conf
+++ b/services/minio.conf
@@ -3,7 +3,9 @@ upstream minio {
 }
 
 server {
-    listen       80;
+    listen       443 ssl;
+    ssl_certificate     /etc/nginx/ssl/tls.crt;
+    ssl_certificate_key /etc/nginx/ssl/tls.key;
     server_name  minio.nicholashenley.com;
 
     location / {
