--- a/nginx.conf
+++ b/nginx.conf
@@ -12,9 +12,10 @@ http {
     access_log  /var/log/nginx/access.log;
 
     server {
-        listen       80;
+        listen       443 ssl;
         server_name  www.nicholashenley.com nicholashenley.com;
-        
+        ssl_certificate     /etc/nginx/ssl/tls.crt;
+        ssl_certificate_key /etc/nginx/ssl/tls.key;
         location / {
             root   /usr/share/nginx/html;   
             index  index.html;
@@ -22,9 +23,10 @@ http {
     }
 
     server {
-        listen 80;
+        listen 443 ssl;
         server_name auth.nicholashenley.com;
-
+        ssl_certificate     /etc/nginx/ssl/tls.crt;
+        ssl_certificate_key /etc/nginx/ssl/tls.key;
         location /google/login {
             proxy_pass http://host.minikube.internal:8080;
             proxy_set_header Host $host;
