--- a/services/pgadmin.conf
+++ b/services/pgadmin.conf
@@ -3,7 +3,9 @@ upstream pgadmin {
 }
 
 server {
-    listen       80;
+    listen       443 ssl;
+    ssl_certificate     /etc/nginx/ssl/tls.crt;
+    ssl_certificate_key /etc/nginx/ssl/tls.key;
     server_name  pg.nicholashenley.com;
 
     location / {
