--- a/services/pihole.conf
+++ b/services/pihole.conf
@@ -1,5 +1,7 @@
 server {
-    listen 80;
+    listen 443 ssl;
+    ssl_certificate     /etc/nginx/ssl/tls.crt;
+    ssl_certificate_key /etc/nginx/ssl/tls.key;
 
     server_name pihole.nicholashenley.com;
 
