updating command for github action

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,6 @@ jobs:
           version: 'latest'
       - name: Apply base kustomization
         run: |
-          kubectl apply -k ./
+          kubectl apply -k ./ --validate=false
         env:
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
