--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,11 @@ env:
 jobs:
   deploy:
     runs-on: self-hosted
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -51,6 +56,6 @@ jobs:
           version: 'latest'
       - name: Apply base kustomization
         run: |
-          kubectl apply -k ./ --validate=false
+          kubectl apply -k deploy/overlays/prod --validate=false
         env:
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
