changed hostname of auth service

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
         ssl_certificate     /etc/nginx/ssl/tls.crt;
         ssl_certificate_key /etc/nginx/ssl/tls.key;
         location /google/login {
-            proxy_pass http://host.minikube.internal:8080;
+            proxy_pass http://auth-service:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,7 +36,7 @@ http {
         }
 
         location /google/callback {
-            proxy_pass http://host.minikube.internal:8080;
+            proxy_pass http://auth-service:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
