--- a/services/proxmox.conf
+++ b/services/proxmox.conf
@@ -30,7 +30,7 @@ server {
 
     location = /auth-request {
         internal;
-        proxy_pass http://host.minikube.internal:8080;
+        proxy_pass http://auth-service:8080;
         proxy_pass_request_body off;
         proxy_set_header Content-Length "";
         proxy_set_header X-Original-URI $request_uri;
