created dockerfile to make copying files easier. Added snippets to follow DRY

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -10,5 +10,9 @@ COPY ../../services/pihole.conf /etc/nginx/conf.d/pihole.conf
 COPY ../../services/plex.conf /etc/nginx/conf.d/plex.conf
 COPY ../../services/proxmox.conf /etc/nginx/conf.d/proxmox.conf
 
+# Copy snippets
+COPY ../../snippets/ssl-common.conf /etc/nginx/snippets/ssl-common.conf
+COPY ../../snippets/auth-request.conf /etc/nginx/snippets/auth-request.conf
+
 # Copy HTML file
 COPY ../../test.html /usr/share/nginx/html/index.html
