--- a/nginx.conf
+++ b/nginx.conf
@@ -12,21 +12,24 @@ http {
     access_log  /var/log/nginx/access.log;
 
     server {
-        listen       443 ssl;
+        include /etc/nginx/snippets/ssl-common.conf;
+
         server_name  www.nicholashenley.com nicholashenley.com;
-        ssl_certificate     /etc/nginx/ssl/tls.crt;
-        ssl_certificate_key /etc/nginx/ssl/tls.key;
+
         location / {
+            auth_request /auth-request;
             root   /usr/share/nginx/html;   
             index  index.html;
         }
+
+        include /etc/nginx/snippets/auth-request.conf;
     }
 
     server {
-        listen 443 ssl;
+        include /etc/nginx/snippets/ssl-common.conf;
+        
         server_name auth.nicholashenley.com;
-        ssl_certificate     /etc/nginx/ssl/tls.crt;
-        ssl_certificate_key /etc/nginx/ssl/tls.key;
+
         location /google/login {
             proxy_pass http://auth-service:8080;
             proxy_set_header Host $host;
