--- a/services/pgadmin.conf
+++ b/services/pgadmin.conf
@@ -3,9 +3,8 @@ upstream pgadmin {
 }
 
 server {
-    listen       443 ssl;
-    ssl_certificate     /etc/nginx/ssl/tls.crt;
-    ssl_certificate_key /etc/nginx/ssl/tls.key;
+    include /etc/nginx/snippets/ssl-common.conf;
+    
     server_name  pg.nicholashenley.com;
 
     location / {
@@ -19,12 +18,5 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location = /auth-request {
-        internal;
-        proxy_pass http://auth-service:8080;
-        proxy_pass_request_body off;
-        proxy_set_header Content-Length "";
-        proxy_set_header X-Original-URI $request_uri;
-        proxy_set_header Host $host;
-    }
+    include /etc/nginx/snippets/auth-request.conf;
 }
