--- a/services/proxmox.conf
+++ b/services/proxmox.conf
@@ -1,12 +1,7 @@
 server {
-    listen 443 ssl;
-    ssl_certificate     /etc/nginx/ssl/tls.crt;
-    ssl_certificate_key /etc/nginx/ssl/tls.key;
+    include /etc/nginx/snippets/ssl-common.conf;
 
     server_name proxmox.nicholashenley.com;
-
-    # set $Original_Host $host;
-    # set $Original_Path $request_uri;
 
     location / {
         auth_request /auth-request;
@@ -28,12 +23,5 @@ server {
         send_timeout  3600s;
     }
 
-    location = /auth-request {
-        internal;
-        proxy_pass http://auth-service:8080;
-        proxy_pass_request_body off;
-        proxy_set_header Content-Length "";
-        proxy_set_header X-Original-URI $request_uri;
-        proxy_set_header Host $host;
-    }
+    include /etc/nginx/snippets/auth-request.conf;
 }
