--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,8 @@ events {
 http {
     access_log  /var/log/nginx/access.log;
 
+    resolver 10.96.0.10 valid=30s;
+
     server {
         include /etc/nginx/snippets/ssl-common.conf;
 
@@ -31,7 +33,7 @@ http {
         server_name auth.nicholashenley.com;
 
         location /google/login {
-            proxy_pass http://auth-service:8080;
+            proxy_pass http://auth-backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -39,7 +41,7 @@ http {
         }
 
         location /google/callback {
-            proxy_pass http://auth-service:8080;
+            proxy_pass http://auth-backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
