--- a/services/plex.conf.template
+++ b/services/plex.conf.template
@@ -1,3 +1,8 @@
+upstream plex {
+    zone plex 64k;
+    server ${PLEX_HOST}:${PLEX_PORT} resolve;
+}
+
 server{
     include /etc/nginx/snippets/ssl-common.conf;
     
@@ -6,7 +11,7 @@ server{
     location / {
         auth_request /auth-request;
 
-        proxy_pass http://plex.local:32400;
+        proxy_pass http://plex;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,7 +24,7 @@ server{
     }
 
     location /socket {
-        proxy_pass http://plex.local:32400;
+        proxy_pass http://plex;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
