--- a/services/proxmox.conf.template
+++ b/services/proxmox.conf.template
@@ -1,11 +1,12 @@
+upstream proxmox {
+    zone proxmox 64k;
+    server ${PROXMOX_HOST}:${PROXMOX_PORT} resolve;
+}
+
 server {
     include /etc/nginx/snippets/ssl-common.conf;
 
-    server_name pihole.nicholashenley.com;
-
-    location = / {
-	return 301 https://pihole.nicholashenley.com/admin/index.php;
-    }
+    server_name proxmox.nicholashenley.com;
 
     location / {
         auth_request /auth-request;
@@ -13,7 +14,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade"; 
-        proxy_pass http://pihole.local:80;
+        proxy_pass https://proxmox;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
