--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -1,6 +1,6 @@
 location = /auth-request {
     internal;
-    proxy_pass http://auth-service:8080;
+    proxy_pass http://auth-backend;
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
     proxy_set_header Host $host;
