--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,19 @@ env:
 jobs:
   deploy:
     runs-on: self-hosted
+    env:
+      MINIO_HOST: ${{ secrets.MINIO_HOST }}
+      MINIO_PORT: ${{ secrets.MINIO_PORT }}
+      PGADMIN_HOST: ${{ secrets.PGADMIN_HOST }}
+      PGADMIN_PORT: ${{ secrets.PGADMIN_PORT }}
+      PLEX_HOST: ${{ secrets.PLEX_HOST }}
+      PLEX_PORT: ${{ secrets.PLEX_PORT }}
+      PIHOLE_HOST: ${{ secrets.PIHOLE_HOST }}
+      PIHOLE_PORT: ${{ secrets.PIHOLE_PORT }}
+      PROXMOX_HOST: ${{ secrets.PROXMOX_HOST }}
+      PROXMOX_PORT: ${{ secrets.PROXMOX_PORT }}
+      AUTH_SERVICE_HOST: ${{ secrets.AUTH_SERVICE_HOST }}
+      AUTH_SERVICE_PORT: ${{ secrets.AUTH_SERVICE_PORT }}
     permissions:
       contents: read
       packages: write
@@ -26,6 +39,25 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create .env file from secrets
+        run: |
+          echo "MINIO_HOST=${MINIO_HOST}" >> deploy/overlays/prod/.env
+          echo "MINIO_PORT=${MINIO_PORT}" >> deploy/overlays/prod/.env
+          echo "PGADMIN_HOST=${PGADMIN_HOST}" >> deploy/overlays/prod/.env
+          echo "PGADMIN_PORT=${PGADMIN_PORT}" >> deploy/overlays/prod/.env
+          echo "PLEX_HOST=${PLEX_HOST}" >> deploy/overlays/prod/.env
+          echo "PLEX_PORT=${PLEX_PORT}" >> deploy/overlays/prod/.env
+          echo "PIHOLE_HOST=${PIHOLE_HOST}" >> deploy/overlays/prod/.env
+          echo "PIHOLE_PORT=${PIHOLE_PORT}" >> deploy/overlays/prod/.env
+          echo "PROXMOX_HOST=${PROXMOX_HOST}" >> deploy/overlays/prod/.env
+          echo "PROXMOX_PORT=${PROXMOX_PORT}" >> deploy/overlays/prod/.env
+          echo "AUTH_SERVICE_HOST=${AUTH_SERVICE_HOST}" >> deploy/overlays/prod/.env
+          echo "AUTH_SERVICE_PORT=${AUTH_SERVICE_PORT}" >> deploy/overlays/prod/.env
+      - name: Create Kubernetes Secret from .env
+        run: |
+          kubectl create secret generic proxy-secret \
+            --from-file=.env=deploy/overlays/prod/.env \
+            --dry-run=client -o yaml > deploy/overlays/prod/secret.yaml
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
