--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -79,6 +79,7 @@ jobs:
           push-to-registry: true
   deploy-k8s-prod:
     runs-on: self-hosted
+    needs: build-and-push
     steps:
     - name: Set up kubectl
       uses: azure/setup-kubectl@v3
