--- a/deploy/overlays/prod/nginx-deploy-patch.yaml
+++ b/deploy/overlays/prod/nginx-deploy-patch.yaml
@@ -22,5 +22,6 @@ spec:
               mountPath: /etc/nginx/ssl
               readOnly: true
             - name: env-file
-              mountPath: /etc/nginx/env
+              mountPath: deploy/overlays/prod/.env
+              subPath: .env
               readOnly: true
