adding redirect upon failed auth_request

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,10 @@ http {
             index  index.html;
         }
 
+        location @oauth_redirect {
+            return 302 https://auth.nicholashenley.com/google/login;
+        }
+
         include /etc/nginx/snippets/auth-request.conf;
     }
 
