--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -1,6 +1,9 @@
 location = /auth-request {
     internal;
     proxy_pass http://auth-backend;
+    proxy_intercept_errors on;
+    error_page 401 = @oauth_redirect;
+
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
     proxy_set_header Host $host;
