movved oauth location to snippet, not service

--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -1,3 +1,7 @@
+location @oauth_redirect {
+    return 302 https://auth.nicholashenley.com/google/login;
+}
+
 location = /auth-request {
     internal;
     proxy_pass http://auth-backend;
