moved redirect to auth_request instead of response from backend

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,8 @@ http {
         server_name  www.nicholashenley.com nicholashenley.com;
 
         location / {
-            auth_request /auth-request;
+            include /etc/nginx/snippets/auth-common.conf;
+                        
             root   /usr/share/nginx/html;   
             index  index.html;
         }
