--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -5,14 +5,11 @@ location @oauth_redirect {
 location = /auth-request {
     internal;
     proxy_pass http://auth-backend;
-    proxy_intercept_errors on;
-    error_page 401 = @oauth_redirect;
-
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
     proxy_set_header Host $host;
-
-    # Redirect after oauth callback
+    
+    # Pass original request information for post-auth redirect
     proxy_set_header X-Original-Path $uri;
     proxy_set_header X-Original-URI $request_uri;
     proxy_set_header X-Original-Host $host;
