--- a/services/pihole.conf.template
+++ b/services/pihole.conf.template
@@ -13,7 +13,7 @@ server {
     }
 
     location / {
-        auth_request /auth-request;
+        include /etc/nginx/snippets/auth-common.conf;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
