--- a/services/proxmox.conf.template
+++ b/services/proxmox.conf.template
@@ -9,7 +9,7 @@ server {
     server_name proxmox.nicholashenley.com;
 
     location / {
-        auth_request /auth-request;
+        include /etc/nginx/snippets/auth-common.conf;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
