--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -14,4 +14,5 @@ location = /auth-request {
     proxy_set_header X-Original-URI $request_uri;
     proxy_set_header X-Original-Host $host;
     proxy_set_header X-Original-Method $request_method;
+    proxy_set_header X-Original-Scheme $scheme;
 }
