--- a/snippets/auth-common.conf
+++ b/snippets/auth-common.conf
@@ -1,3 +1,17 @@
+# Capture original request information before auth subrequest
+auth_request_set $original_path $uri;
+auth_request_set $original_uri $request_uri;
+auth_request_set $original_host $host;
+auth_request_set $original_method $request_method;
+auth_request_set $original_scheme $scheme;
+
+# Set headers to pass original request info to auth endpoint
+proxy_set_header X-Original-Path $original_path;
+proxy_set_header X-Original-URI $original_uri;
+proxy_set_header X-Original-Host $original_host;
+proxy_set_header X-Original-Method $original_method;
+proxy_set_header X-Original-Scheme $original_scheme;
+
 auth_request /auth-request;
 proxy_intercept_errors on;
 error_page 401 = @oauth_redirect;
