--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -4,15 +4,15 @@ location @oauth_redirect {
 
 location = /auth-request {
     internal;
-    proxy_pass http://auth-backend;
     proxy_pass_request_body off;
     proxy_set_header Content-Length "";
     proxy_set_header Host $host;
     
-    # Pass original request information for post-auth redirect
-    proxy_set_header X-Original-Path $uri;
-    proxy_set_header X-Original-URI $request_uri;
-    proxy_set_header X-Original-Host $host;
-    proxy_set_header X-Original-Method $request_method;
-    proxy_set_header X-Original-Scheme $scheme;
+    proxy_set_header X-Original-Path $http_x_original_path;
+    proxy_set_header X-Original-URI $http_x_original_uri;
+    proxy_set_header X-Original-Host $http_x_original_host;
+    proxy_set_header X-Original-Method $http_x_original_method;
+    proxy_set_header X-Original-Scheme $http_x_original_scheme;
+
+    proxy_pass http://auth-backend;
 }
