--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -8,5 +8,11 @@ location = /auth-request {
     proxy_set_header Content-Length "";
     proxy_set_header Host $host;
 
+    proxy_set_header X-Original-Path $original_path;
+    proxy_set_header X-Original-URI $original_uri;
+    proxy_set_header X-Original-Host $original_host;
+    proxy_set_header X-Original-Method $original_method;
+    proxy_set_header X-Original-Scheme $original_scheme;
+
     proxy_pass http://auth-backend;
 }
