--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,13 @@ http {
 
         location /google/login {
             proxy_pass http://auth-backend;
+
+            proxy_set_header X-Original-Path $original_path;
+            proxy_set_header X-Original-URI $original_uri;
+            proxy_set_header X-Original-Host $original_host;
+            proxy_set_header X-Original-Method $original_method;
+            proxy_set_header X-Original-Scheme $original_scheme;
+            
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
