changed redirect to proxy_pass and added headers on redirect to google/login

--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -1,5 +1,16 @@
 location @oauth_redirect {
-    return 302 https://auth.nicholashenley.com/google/login;
+    # Proxy to auth backend with original request headers
+    proxy_set_header Host auth.nicholashenley.com;
+    proxy_set_header X-Original-Path $uri;
+    proxy_set_header X-Original-URI $request_uri;
+    proxy_set_header X-Original-Host $host;
+    proxy_set_header X-Original-Method $request_method;
+    proxy_set_header X-Original-Scheme $scheme;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    proxy_pass http://auth-backend/google/login;
 }
 
 location = /auth-request {
