trying new redirect on authentication failure

--- a/snippets/auth-common.conf
+++ b/snippets/auth-common.conf
@@ -7,4 +7,4 @@ set $original_scheme $scheme;
 
 auth_request /auth-request;
 proxy_intercept_errors on;
-error_page 401 = @oauth_redirect;
+error_page 401 = /google/login;
