--- a/services/plex.conf.template
+++ b/services/plex.conf.template
@@ -15,7 +15,7 @@ server{
     location /web {
         include /etc/nginx/snippets/auth-common.conf;
 
-        proxy_pass http://plex;
+        proxy_pass https://plex;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -26,7 +26,7 @@ server{
     }
 
     location /socket {
-        proxy_pass http://plex;
+        proxy_pass https://plex;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
