--- a/services/plex.conf.template
+++ b/services/plex.conf.template
@@ -12,7 +12,7 @@ server{
         return 302 /web;
     }
 
-    location /web {
+    location / {
         include /etc/nginx/snippets/auth-common.conf;
 
         proxy_pass http://plex;
