fixed syntax error with plex upstream

--- a/services/plex.conf.template
+++ b/services/plex.conf.template
@@ -34,7 +34,7 @@ server{
     location / {
         include /etc/nginx/snippets/auth-common.conf;
 
-        proxy_pass $plex;
+        proxy_pass http://plex;
     }
 
     include /etc/nginx/snippets/auth-request.conf;
