--- a/services/plex.conf.template
+++ b/services/plex.conf.template
@@ -31,6 +31,10 @@ server{
     proxy_redirect off;
     proxy_buffering off;
 
+    location = / {
+        return 302 /web;
+    }
+
     location / {
         include /etc/nginx/snippets/auth-common.conf;
 
