--- a/snippets/auth-common.conf
+++ b/snippets/auth-common.conf
@@ -5,8 +5,19 @@ set $original_host $host;
 set $original_method $request_method;
 set $original_scheme $scheme;
 
-{
-    auth_request /auth-request;
-    proxy_intercept_errors on;
-    error_page 401 = /google/login;
+# Auth request configuration
+auth_request /auth-request;
+
+# Capture auth response and handle auth failures specifically
+auth_request_set $auth_status $upstream_status;
+auth_request_set $auth_user $upstream_http_x_user;
+
+# Only intercept errors from auth_request, not from backend
+recursive_error_pages on;
+error_page 401 = @handle_auth_error;
+
+# Handle authentication errors specifically
+location @handle_auth_error {
+    # This will only be called for auth_request 401s
+    return 302 /google/login;
 }
