moving location block to legal place

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,12 @@ http {
 
     resolver 10.96.0.10 valid=30s;
 
+    # Handle authentication errors specifically
+    location @handle_auth_error {
+        # This will only be called for auth_request 401s
+        return 302 /google/login;
+    }
+
     server {
         include /etc/nginx/snippets/ssl-common.conf;
 
