moving back to auth-common

--- a/snippets/auth-common.conf
+++ b/snippets/auth-common.conf
@@ -15,3 +15,9 @@ auth_request_set $auth_user $upstream_http_x_user;
 # Only intercept errors from auth_request, not from backend
 recursive_error_pages on;
 error_page 401 = @handle_auth_error;
+
+# Handle authentication errors specifically
+location @handle_auth_error {
+    # This will only be called for auth_request 401s
+    return 302 /google/login;
+}
