moved from inside a location block to server lvl

--- a/snippets/ssl-common.conf
+++ b/snippets/ssl-common.conf
@@ -1,3 +1,9 @@
 listen       443 ssl;
 ssl_certificate     /etc/nginx/ssl/tls.crt;
 ssl_certificate_key /etc/nginx/ssl/tls.key;
+
+# Handle authentication errors specifically
+location @handle_auth_error {
+    # This will only be called for auth_request 401s
+    return 302 /google/login;
+}
