--- a/snippets/ssl-common.conf
+++ b/snippets/ssl-common.conf
@@ -5,5 +5,5 @@ ssl_certificate_key /etc/nginx/ssl/tls.key;
 # Handle authentication errors specifically
 location @handle_auth_error {
     # This will only be called for auth_request 401s
-    return 302 auth.nicholashenley.com/google/login;
+    return 302 https://auth.nicholashenley.com/google/login;
 }
