reverted back to /google/login redirect. Tried changing host before proxying

--- a/snippets/auth-request.conf
+++ b/snippets/auth-request.conf
@@ -16,5 +16,7 @@ location = /google/login {
     proxy_set_header X-Original-Method $original_method;
     proxy_set_header X-Original-Scheme $original_scheme;
 
+    proxy_set_header Host auth.nicholashenley.com;
+
     proxy_pass http://auth-backend;
 }
