trying proxy pass in handle_auth_error

--- a/snippets/ssl-common.conf
+++ b/snippets/ssl-common.conf
@@ -5,5 +5,12 @@ ssl_certificate_key /etc/nginx/ssl/tls.key;
 # Handle authentication errors specifically
 location @handle_auth_error {
     # This will only be called for auth_request 401s
-    return 302 /google/login;
+    # Internal redirect to the auth subdomain
+    proxy_pass https://auth.nicholashenley.com/google/login;
+    proxy_set_header X-Original-Path $original_path;
+    proxy_set_header X-Original-URI $original_uri;
+    proxy_set_header X-Original-Host $original_host;
+    proxy_set_header X-Original-Method $original_method;
+    proxy_set_header X-Original-Scheme $original_scheme;
+    proxy_set_header Host auth.nicholashenley.com;
 }
