fixed syntax error adding uri to proxy pass

--- a/snippets/ssl-common.conf
+++ b/snippets/ssl-common.conf
@@ -6,7 +6,8 @@ ssl_certificate_key /etc/nginx/ssl/tls.key;
 location @handle_auth_error {
     # This will only be called for auth_request 401s
     # Internal redirect to the auth subdomain
-    proxy_pass https://auth.nicholashenley.com/google/login;
+    rewrite ^.*$ /google/login break;
+    proxy_pass http://auth-backend;
     proxy_set_header X-Original-Path $original_path;
     proxy_set_header X-Original-URI $original_uri;
     proxy_set_header X-Original-Host $original_host;
