--- a/services/minio.conf.template
+++ b/services/minio.conf.template
@@ -11,7 +11,7 @@ server {
     location / {
         include /etc/nginx/snippets/auth-common.conf;
 
-        proxy_pass http://minio_console;
+        proxy_pass http://minio;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
