--- a/nginx.conf
+++ b/nginx.conf
@@ -19,10 +19,21 @@ http {
         server_name  www.nicholashenley.com nicholashenley.com;
 
         location / {
+            rewrite ^/(.+)$ /portfolioassets/$1 break;                
+            
             include /etc/nginx/snippets/auth-common.conf;
                         
-            root   /usr/share/nginx/html;   
-            index  index.html;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_connect_timeout 300;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding off;
+
+            proxy_pass http://minio_s3;
         }
 
         include /etc/nginx/snippets/auth-request.conf;
