updated path rewrite to match bucket structure

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
         server_name  www.nicholashenley.com nicholashenley.com;
 
         location / {
-            rewrite ^/(.+)$ /portfolioassets/$1 break;                
+            rewrite ^/(.+)$ /portfolioassets/latest/$1 break;                
             
             include /etc/nginx/snippets/auth-common.conf;
                         
