creating default path as index.html

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,10 @@ http {
 
         server_name  www.nicholashenley.com nicholashenley.com;
 
+        location = / {
+            return 301 https://www.nicholashenley.com/index.html;
+        }
+
         location / {
             rewrite ^/(.+)$ /portfolioassets/latest/$1 break;                
             
