updated domain name

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,10 +16,10 @@ http {
     server {
         include /etc/nginx/snippets/ssl-common.conf;
 
-        server_name  www.nicholashenley.com nicholashenley.com;
+        server_name  www.nickhenley.dev nickhenley.dev;
 
         location = / {
-            return 301 https://www.nicholashenley.com/index.html;
+            return 301 https://www.nickhenley.dev/index.html;
         }
 
         location / {
@@ -46,7 +46,7 @@ http {
     server {
         include /etc/nginx/snippets/ssl-common.conf;
         
-        server_name auth.nicholashenley.com;
+        server_name auth.nickhenley.dev;
 
         location /google/login {
             proxy_pass http://auth-backend;
