--- a/snippets/ssl-common.conf
+++ b/snippets/ssl-common.conf
@@ -13,5 +13,5 @@ location @handle_auth_error {
     proxy_set_header X-Original-Host $original_host;
     proxy_set_header X-Original-Method $original_method;
     proxy_set_header X-Original-Scheme $original_scheme;
-    proxy_set_header Host auth.nicholashenley.com;
+    proxy_set_header Host auth.nickhenley.dev;
 }
