--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     server {
         include /etc/nginx/snippets/ssl-common.conf;
 
-        server_name  www.nickhenley.dev nickhenley.dev;
+        server_name nickhenley.dev www.nickhenley.dev;
 
         location = / {
             return 301 https://www.nickhenley.dev/index.html;
@@ -41,6 +41,7 @@ http {
         }
 
         include /etc/nginx/snippets/auth-request.conf;
+        include /etc/nginx/snippets/auth_unauthorized.conf;
     }
 
     server {
