--- a/.github/actions/deploy/action.yaml
+++ b/.github/actions/deploy/action.yaml
@@ -38,6 +38,10 @@ runs:
         mkdir -p $HOME/.kube
         echo "${{ inputs.kubeconfig }}" | base64 -d > $HOME/.kube/config
         chmod 600 $HOME/.kube/config
+        # Verify kubeconfig is valid
+        export KUBECONFIG=$HOME/.kube/config
+        kubectl config view --minify
+        kubectl cluster-info
 
     - name: Update image tag in kustomization
       shell: bash
@@ -52,6 +56,8 @@ runs:
           # Update existing image tag
           sed -i "s/newTag: .*/newTag: ${{ inputs.image-tag }}/" kustomization.yaml
         fi
+      env:
+        KUBECONFIG: $HOME/.kube/config
 
     - name: Apply Kustomization
       shell: bash
@@ -64,9 +70,13 @@ runs:
       shell: bash
       run: |
         kubectl rollout status deployment/${{ inputs.deployment-name }} -n ${{ inputs.namespace }} --timeout=300s
+      env:
+        KUBECONFIG: $HOME/.kube/config
 
     - name: Verify deployment
       shell: bash
       run: |
         kubectl get pods -l app=nginx -n ${{ inputs.namespace }}
         kubectl get service -l app=nginx -n ${{ inputs.namespace }}
+      env:
+        KUBECONFIG: $HOME/.kube/config
