fixing image pull issue with sha tag

--- a/.github/actions/build-image/action.yaml
+++ b/.github/actions/build-image/action.yaml
@@ -28,6 +28,9 @@ outputs:
   image-tags:
     description: 'The tags of the built image'
     value: ${{ steps.meta.outputs.tags }}
+  sha-tag:
+    description: 'The SHA tag specifically'
+    value: ${{ steps.extract-sha.outputs.sha-tag }}
 
 runs:
   using: 'composite'
